- Fixed nginx config for masked timthumb URLs - Redesigned header and alerts area - Readded sidebar (for now) - Tweaked spacing and elements on the homepage

--- a/app/assets/sass/global.scss
+++ b/app/assets/sass/global.scss
@@ -53,7 +53,7 @@ html, body {
 @import "structure/slider";
 
 #main-container {
-	padding: 60px 0 40px;
+	padding: 30px 0 15px;
 	background: #FFF;
 }
 
