--- a/app/assets/sass/includes/_definitions.scss
+++ b/app/assets/sass/includes/_definitions.scss
@@ -8,6 +8,8 @@ $link-color: #369;
 $link-color-hover: lighten($link-color, 14%);
 $link-color-active: #F90;
 
+$global-border-color: #BFBEB9;
+
 $vpmtan: darken(#F6F3EB, 7%);
 
 
