--- a/app/assets/sass/pages/_front-page.scss
+++ b/app/assets/sass/pages/_front-page.scss
@@ -1,6 +1,6 @@
 #feature-box {
 	border-bottom: 1px dotted $vpmtan;
-	padding: 20px 0 50px;
+	padding: 10px 0 25px;
 }
 
 #slogan {
